@@ -1,5 +1,6 @@
 package org.hyperledger.iroha.android.model.instructions;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -22,7 +23,7 @@ public final class RegisterKaigiRelayInstruction implements InstructionTemplate 
     this.relayId = builder.relayId;
     this.hpkePublicKeyBase64 = builder.hpkePublicKeyBase64;
     this.bandwidthClass = builder.bandwidthClass;
-    this.arguments = Map.copyOf(argumentOrder);
+    this.arguments = Collections.unmodifiableMap(new LinkedHashMap<>(argumentOrder));
   }
 
   public String relayId() {
@@ -48,6 +49,7 @@ public final class RegisterKaigiRelayInstruction implements InstructionTemplate 
   }
 
   public static RegisterKaigiRelayInstruction fromArguments(final Map<String, String> arguments) {
+    KaigiInstructionUtils.requireAction(arguments, ACTION);
     final Builder builder = builder();
     builder.setRelayId(KaigiInstructionUtils.require(arguments, "relay.relay_id"));
     builder.setHpkePublicKeyBase64(KaigiInstructionUtils.require(arguments, "relay.hpke_public_key"));
